image/pypi/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypi
spec:
  template:
    spec:
      containers:
        - name: pypi
