image/pypi/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pypi.example.com
  rules:
    - host: pypi.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pypi
                port:
                  number: 80
